--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,6 +46,7 @@ form {
 .space-between {
     display: flex;
     justify-content: space-between;
+    margin: 1em 1em 1em 1em;
 }
 
 .code-base64{
